describe magic json trick - TODO user a simpler example!

--- a/_posts/2015-08-19-plotly_js-reference.html
+++ b/_posts/2015-08-19-plotly_js-reference.html
@@ -47,6 +47,8 @@ page_type: reference
     }
 }</code></pre>
 
+    <br>You can also view the JSON for any plotly graph by appending ".json" to the end of the URL. For example, the JSON representation of <a href="https://plot.ly/~chris/1638">https://plot.ly/~chris/1638</a> is at <a href="https://plot.ly/~chris/1638.json">https://plot.ly/~chris/1638.json</a>.
+
     </p>
     <hr>
 </div>
