get ready for language-aware templating

--- a/_posts/2015-08-19-plotly_js-reference.html
+++ b/_posts/2015-08-19-plotly_js-reference.html
@@ -52,6 +52,7 @@ page_type: reference
     </p>
     <hr>
 </div>
+{% capture plotschemacontent %}
 <div class="row">
     <div class="four columns">
         <div class="toc">
@@ -93,3 +94,9 @@ page_type: reference
 
     </div>
 </div>
+{% endcapture %}
+{% capture curlyarray %}{% raw %}{array}{% endraw %}{% endcapture %}
+{% capture curlyarrays %}{% raw %}{arrays}{% endraw %}{% endcapture %}
+{% capture curly2darray %}{% raw %}{2D array}{% endraw %}{% endcapture %}
+{% capture curlyobject %}{% raw %}{object}{% endraw %}{% endcapture %}
+{{ plotschemacontent | replace:'*','"' | replace:curlyarray,"array" | replace:curlyobject,"object" | replace:curlyarrays,"arrays" | replace:curly2darray,"2D array" | replace:"data_array","data array" }}
