describe what the trace objects are

--- a/_posts/2015-08-19-plotly_js-reference.html
+++ b/_posts/2015-08-19-plotly_js-reference.html
@@ -77,7 +77,8 @@ page_type: reference
     {% for trace in site.data.plotschema.traces %}
         <a id="{{ trace[0] }}" href="#{{ trace[0] }}"><h4>{{ trace[0] }}</h4></a>
         <div class="description">
-            {{ trace[1].description }}
+            A <code>{{trace[0]}}</code> trace is an object with the key <code>"type"</code> equal to <code>"{{trace[1].attributes.type}}"</code> (i.e. <code>{"type": "{{trace[1].attributes.type}}"}</code>) and any of the keys listed below.
+            <br><br>{{ trace[1].description }}<br><br>
         </div>
         {% assign localparentlink=trace[0] %}
         {% assign attribute=trace[1].attributes %}
