--- a/_posts/php/line_and_scatter/2015-04-09-line_and_scatter_php_index.html
+++ b/_posts/php/line_and_scatter/2015-04-09-line_and_scatter_php_index.html
@@ -2,7 +2,7 @@
 title: PHP Scatter Plots | Examples | Plotly
 name: Scatter Plots
 permalink: php/line-and-scatter/
-description: How to make scatter plots in Ruby. Seven examples of basic and colored line and scatter plots.
+description: How to make scatter plots in PHP. Seven examples of basic and colored line and scatter plots.
 layout: base
 thumbnail: /images/line_and_scatter.png
 language: php
