--- a/_posts/python/dashboard/2015-07-29-dashboard-index.html
+++ b/_posts/python/dashboard/2015-07-29-dashboard-index.html
@@ -32,7 +32,7 @@ order: 0
         <div class="chart-stage">
           <div id="grid-1-1">
             <div>
-              <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~streaming-demos/12.embed"></iframe>
+              <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~streaming-demos/12.embed?link=false"></iframe>
             </div>
           </div>
         </div>
@@ -47,7 +47,7 @@ order: 0
           Bar Chart Example
         </div>
         <div class="chart-stage">
-          <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/10021.embed"></iframe>
+          <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/10021.embed?link=false"></iframe>
         </div>
         <div class="chart-notes">
           Make a <a href="https://plot.ly/{{page.language | capitalize}}/bar-charts/">bar chart</a> in {{page.language | capitalize}}
@@ -63,7 +63,7 @@ order: 0
           Map Example
         </div>
         <div class="chart-stage">
-          <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/10002.embed"></iframe>
+          <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/10002.embed?link=false"></iframe>
         </div>
         <div class="chart-notes">
           Make <a href="https://plot.ly/{{page.language | capitalize}}/choropleth-maps/">choropleth maps, <a href="https://plot.ly/{{page.language | capitalize}}/bubble-maps/">bubble maps</a>, and <a href="https://plot.ly/{{page.language | capitalize}}/lines-on-maps/">lines on maps</a> in {{page.language | capitalize}}          
@@ -76,7 +76,7 @@ order: 0
           Cron Job Example
         </div>
         <div class="chart-stage">
-          <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/10010.embed"></iframe>
+          <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/10010.embed?link=false"></iframe>
         </div>
         <div class="chart-notes">
           This chart was updated every 30 minutes for 4 months with a <a href="http://moderndata.plot.ly/graph-data-from-mysql-database-in-python/">cron job</a>
@@ -89,7 +89,7 @@ order: 0
           Histogram Fit Example
         </div>
         <div class="chart-stage">
-          <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/10033.embed"></iframe>
+          <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/10033.embed?link=false"></iframe>
         </div>
         <div class="chart-notes">
           Make a <a href="https://plot.ly/{{page.language | capitalize}}/histograms/">histogram</a> in {{page.language | capitalize}}
@@ -106,7 +106,7 @@ order: 0
           Hover Text Example
         </div>
         <div class="chart-stage">
-          <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/10057.embed"></iframe>
+          <iframe width="100%" height="480px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/10057.embed?link=false"></iframe>
         </div>
         <div class="chart-notes">
           Turn MySQL queries into <a href="http://moderndata.plot.ly/graph-data-from-mysql-database-in-python/">bubble charts</a> in {{page.language | capitalize}}
@@ -121,7 +121,7 @@ order: 0
         <div class="chart-stage">
           <div style="padding:50px 20px; text-align:center;">
           <div id="slider" style="max-width:800px;width:100%;display: block;margin-left:auto; margin-right: auto;"></div> 
-          <iframe id="plot" width="100%" height="600px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/3880.embed"></iframe>
+          <iframe id="plot" width="100%" height="600px" frameborder="0" scrolling="no" src="https://plot.ly/~jackp/3880.embed?link=false"></iframe>
         </div>
         <div class="chart-notes">
           Add custom buttons, sliders, and dropdowns to any chart with Plotly's <a href="https://github.com/plotly/postMessage-API">postMessage JavaScript API</a>. Copy these examples for <a href="/{{page.language}}/#chart-events">{{page.language | capitalize}}</a>.          </div>
