cleanup plotly.js reference intro
- code formatting makes the vertically aligned comments go out of wack,
so remove that

--- a/_posts/2015-08-19-plotly_js-reference.html
+++ b/_posts/2015-08-19-plotly_js-reference.html
@@ -13,42 +13,42 @@ page_type: reference
 
         Here is a simple example of a plotly chart inlined with links to each attribute's reference section.
 
-<pre><code class="javascript js language-javascript language-js">{
-    "data": [
-        {
-            "type": "scatter",  // all "scatter" attributes: <a href="#scatter">https://plot.ly/javascript/reference/#scatter</a>
-            "x": [1, 2, 3],     // more about "x": <a href="#scatter-x">#scatter-x</a>
-            "y": [3, 1, 6],     // <a href="#scatter-y">#scatter-y</a>
-            "marker": {         // marker is an object, here are valid marker keys: <a href="#scatter-marker">#scatter-marker</a>
-                "color": "rgb(rgb(16, 32, 77)" // more about "marker.color": <a href="#scatter-marker-color">#scatter-marker-color</a>
-            }
-        },
-        {
-            "type": "bar",      // all "bar" chart attributes: <a href="#bar">#bar</a>
-            "x": [1, 2, 3],     // more about "x": <a href="#bar-x">#bar-x</a>
-            "y": [3, 1, 6],     // <a href="#bar-y">#bar-y</a>
-            "name": "bar chart example" // <a href="#bar-name">#bar-name</a>
-        },
-    ],
-    "layout": {                     // all "layout" attributes: <a href="#layout">#layout</a>
-        "title": "simple example",  // more about "layout.title": <a href="#layout-title">#layout-title</a>
-        "xaxis": {                  // all "layout.xaxis" attributes: <a href="#layout-xaxis">#layout-xaxis</a>
-            "title": "time"         // more about "layout.xaxis.title": <a href="#layout-xaxis-title">#layout-xaxis-title</a>
-        },
-        "annotations": [            // all "annotation" attributes: <a href="#layout-annotations">#layout-annotations</a>
-            {
-                "text": "simple annotation",    // <a href="#layout-annotations-text">#layout-annotations-text</a>
-                "x": 0,                         // <a href="#layout-annotations-x">#layout-annotations-x</a>
-                "xref": "paper",                // <a href="#layout-annotations-xref">#layout-annotations-xref</a>
-                "y": 0,                         // <a href="#layout-annotations-y">#layout-annotations-y</a>
-                "yref": "paper"                 // <a href="#layout-annotations-yref">#layout-annotations-yref</a>
-            }
-        ]
+<pre>
+data = [
+    {
+        "type": "scatter",  // all "scatter" attributes: <a href="#scatter">https://plot.ly/javascript/reference/#scatter</a>
+        "x": [1, 2, 3],     // more about "x": <a href="#scatter-x">#scatter-x</a>
+        "y": [3, 1, 6],     // <a href="#scatter-y">#scatter-y</a>
+        "marker": {         // marker is an object, valid marker keys: <a href="#scatter-marker">#scatter-marker</a>
+            "color": "rgb(16, 32, 77)" // more about "marker.color": <a href="#scatter-marker-color">#scatter-marker-color</a>
+        }
+    },
+    {
+        "type": "bar",      // all "bar" chart attributes: <a href="#bar">#bar</a>
+        "x": [1, 2, 3],     // more about "x": <a href="#bar-x">#bar-x</a>
+        "y": [3, 1, 6],     // <a href="#bar-y">#bar-y</a>
+        "name": "bar chart example" // <a href="#bar-name">#bar-name</a>
     }
-}</code></pre>
 
     <br>You can also view the JSON for any plotly graph by appending ".json" to the end of the URL. For example, the JSON representation of <a href="https://plot.ly/~chris/1638">https://plot.ly/~chris/1638</a> is at <a href="https://plot.ly/~chris/1638.json">https://plot.ly/~chris/1638.json</a>.
 
+];
+
+layout = {                     // all "layout" attributes: <a href="#layout">#layout</a>
+    "title": "simple example",  // more about "layout.title": <a href="#layout-title">#layout-title</a>
+    "xaxis": {                  // all "layout.xaxis" attributes: <a href="#layout-xaxis">#layout-xaxis</a>
+        "title": "time"         // more about "layout.xaxis.title": <a href="#layout-xaxis-title">#layout-xaxis-title</a>
+    },
+    "annotations": [            // all "annotation" attributes: <a href="#layout-annotations">#layout-annotations</a>
+        {
+            "text": "simple annotation",    // <a href="#layout-annotations-text">#layout-annotations-text</a>
+            "x": 0,                         // <a href="#layout-annotations-x">#layout-annotations-x</a>
+            "xref": "paper",                // <a href="#layout-annotations-xref">#layout-annotations-xref</a>
+            "y": 0,                         // <a href="#layout-annotations-y">#layout-annotations-y</a>
+            "yref": "paper"                 // <a href="#layout-annotations-yref">#layout-annotations-yref</a>
+        }
+    ]
+}</pre>
     </p>
     <hr>
 </div>
