abstract out the reference template

--- a/_posts/2015-08-19-plotly_js-reference.html
+++ b/_posts/2015-08-19-plotly_js-reference.html
@@ -49,53 +49,13 @@ layout = {                     // all "layout" attributes: <a href="#layout">#la
     </p>
     <hr>
 </div>
-{% capture plotschemacontent %}
-<div class="row">
-    <div class="four columns">
-        <div class="toc">
-            {% for trace in site.data.plotschema.traces %}
-                <a href="#{{trace[0]}}"><h4>{{trace[0]}}</h4></a>
-                {% assign attribute=trace[1].attributes %}
-                {% assign localparentlink=trace[0] %}
-                {% assign display_info = false %}
-                {% assign toc = true %}
-                {% include reference-block.html parentlink=localparentlink %}
-                <hr>
-            {% endfor %}
 
-            <a href="#layout"><h4>layout</h4></a>
-            {% assign localparentlink="layout" %}
-            {% assign attribute=site.data.plotschema.layout.layoutAttributes %}
-            {% include reference-block.html parentlink=localparentlink %}
-        </div>
-    </div>
+{% assign quote='"' %}
+{% assign array='array' %}
+{% assign arrays='arrays' %}
+{% assign object='object' %}
+{% assign 2darray='2D array' %}
+{% assign data_array='data array' %}
+{% include plotschema-reference.html quote=quote array=array arrays=arrays object=object 2darray=2darray data_array=data_array %}
 
-    <div class="eight columns">
-    {% for trace in site.data.plotschema.traces %}
-        <a id="{{ trace[0] }}" href="#{{ trace[0] }}"><h4>{{ trace[0] }}</h4></a>
-        <div class="description">
-            A <code>{{trace[0]}}</code> trace is an object with the key <code>"type"</code> equal to <code>"{{trace[1].attributes.type}}"</code> (i.e. <code>{"type": "{{trace[1].attributes.type}}"}</code>) and any of the keys listed below.
-            <br><br>{{ trace[1].description }}<br><br>
-        </div>
-
-        {% assign localparentlink=trace[0] %}
-        {% assign attribute=trace[1].attributes %}
-        {% assign display_info = true %}
-        {% assign toc = false %}
-        {% include reference-block.html parentlink=localparentlink%}
-        <hr>
-    {% endfor %}
-
-    <a id="layout" href="#layout"><h4>layout</h4></a>
-    {% assign localparentlink="layout" %}
-    {% assign attribute=site.data.plotschema.layout.layoutAttributes %}
-    {% include reference-block.html parentlink=localparentlink %}
-
-    </div>
-</div>
-{% endcapture %}
-{% capture curlyarray %}{% raw %}{array}{% endraw %}{% endcapture %}
-{% capture curlyarrays %}{% raw %}{arrays}{% endraw %}{% endcapture %}
-{% capture curly2darray %}{% raw %}{2D array}{% endraw %}{% endcapture %}
-{% capture curlyobject %}{% raw %}{object}{% endraw %}{% endcapture %}
-{{ plotschemacontent | replace:'*','"' | replace:curlyarray,"array" | replace:curlyobject,"object" | replace:curlyarrays,"arrays" | replace:curly2darray,"2D array" | replace:"data_array","data array" }}
+{% include plotschema-reference.html %}
