--- a/_posts/2015-08-19-plotly_js-reference.html
+++ b/_posts/2015-08-19-plotly_js-reference.html
@@ -2,6 +2,7 @@
 permalink: /javascript/reference
 layout: langindex
 page_type: reference
+language: plotly_js
 ---
 <h2><code>plotly.js</code> figure reference</h2>
 
