--- a/_posts/2015-09-09-matlab-reference.html
+++ b/_posts/2015-09-09-matlab-reference.html
@@ -62,7 +62,7 @@ ans =
     plot_bgcolor: 'rgba(0,0,0,0)'       % layout's 'plot_bgcolor':  <a href="#layout-plot_bgcolor">#layout-plot_bgcolor</a>
           xaxis1: [1x1 struct]          % layout's 'xaxis':         <a href="#layout-xaxis">#layout-xaxis</a>
           yaxis1: [1x1 struct]          % layout's 'yaxis':         <a href="#layout-yaxis">#layout-yaxis</a>
-     annotations: {[1x1 struct]}        % layout's 'annotations':   <a href="#layout-yaxis">#layout-annotations</a>
+     annotations: {[1x1 struct]}        % layout's 'annotations':   <a href="#layout-annotations">#layout-annotations</a>
 
 &gt;&gt; fig.layout.legend = struct('x', 1, 'y', 1); % Update the legend: <a href="#layout-legend">#layout-legend</a>
 &gt;&gt; fig.layout.title = 'Modified plot';
