--- a/_posts/2015-09-09-matlab-reference.html
+++ b/_posts/2015-09-09-matlab-reference.html
@@ -64,6 +64,7 @@ ans =
           yaxis1: [1x1 struct]          % layout's 'yaxis':         <a href="#layout-yaxis">#layout-yaxis</a>
      annotations: {[1x1 struct]}        % layout's 'annotations':   <a href="#layout-annotations">#layout-annotations</a>
 
+&gt;&gt; fig.layout.showlegend = true;  % layout's 'showlegend':    <a href="#layout-showlegend">#layout-showlegend</a>
 &gt;&gt; fig.layout.legend = struct('x', 1, 'y', 1); % Update the legend: <a href="#layout-legend">#layout-legend</a>
 &gt;&gt; fig.layout.title = 'Modified plot';
 
