add offfline option to reference

--- a/_posts/2015-09-09-matlab-reference.html
+++ b/_posts/2015-09-09-matlab-reference.html
@@ -71,6 +71,7 @@ ans =
 %% Set the filename, and overwrite the plot if it already exists
 &gt;&gt; fig.PlotOptions.FileName = 'Customized plot';
 &gt;&gt; fig.PlotOptions.FileOpt = 'overwrite';
+&gt;&gt; % using offline? Then set fig.PlotOptions.Offline = true;
 
 %% Send to plotly
 &gt;&gt; fig.plotly
