--- a/_posts/plotly_js/axes/2015-09-18-axes-dates.html
+++ b/_posts/plotly_js/axes/2015-09-18-axes-dates.html
@@ -1,6 +1,6 @@
 ---
 name: Using Dates on the X-Axis
-plot_url: https://codepen.io/plotly/pen/bVpJrB/
+plot_url: https://codepen.io/plotly/embed/bVpJrB/?height=444&theme-id=15263&default-tab=result
 language: plotly_js
 suite: axes
 order: 9
