--- a/_posts/plotly_js/axes/2015-09-18-axes-categories.html
+++ b/_posts/plotly_js/axes/2015-09-18-axes-categories.html
@@ -1,6 +1,6 @@
 ---
 name: Categorical Axes
-plot_url: https://codepen.io/plotly/pen/JYXVNw/
+plot_url: https://codepen.io/plotly/embed/bVpJrB/?height=447&theme-id=15263&default-tab=result
 language: plotly_js
 suite: axes
 order: 10
